# 2024-ims

./: README.md
1_git/: README.md
2_hpp/: README.md  puzzle.ipynb
2_hpp/architecture/: README.md
2_hpp/benchmark_low_level/: README.md  cpu0-bwr.csv  cpu0-bww.csv  cpu0-lseq.csv  howto_benchmark.txt  plot.py  results_cpu0
2_hpp/benchmark_python/: README.md  results_cpu10
2_hpp/numpy/: README.md
2_hpp/parallel/: README.md  overcommit.py
2_hpp/speed/: README.md  cpu_clock_rate.csv  cpu_clock_rate.py  memory.csv  memory.py  storage.csv  storage.py
4_ODD/: .gitignore  LICENSE  README.md  pyproject.toml
4_ODD/brewing/: brew_potions.py  containers.py  cooking.py  ingredients.py  inspection.py  potion_class.py
4_ODD/exercises/: Exercise 1 Virtual Environments.md  Exercise 2 Importing.md  Exercise 3 Editable Installation.md  Exercise 4 Workflow.md  Exercise 5 Documentation.md
4_ODD/scripts_and_notebooks/: example_usage_different_folder.py
5_CI_and_Sphinx/: continuous_integration.pptx  sphinx.pptx
git/: README.md  auth.py
hpp/: README.md  puzzle.ipynb
hpp/architecture/: README.md
hpp/benchmark_low_level/: README.md  cpu0-lrnd.csv  cpu10-bwr.csv  cpu10-bww.csv  cpu10-lrnd.csv  cpu10-lseq.csv  parse_results.py  plot.py  results_cpu10
hpp/benchmark_mm/: bench.py  plot.py  results_1  results_2  results_3  submit.sh
hpp/benchmark_python/: README.md  bench.py  bench_plot.py  our_benchmark.py  results_cpu0  results_cpu10
hpp/numpy/: README.md
hpp/parallel/: create_data.py  overcommit.py  parallel.ipynb  plot_data.py  submit.sh
(+2 files in other folders)
